--- a/package.json
+++ b/package.json
@@ -6,12 +6,24 @@
   "version": "1.0.0",
   "main": "index.js",
   "devDependencies": {
+    "node-sass": "^9.0.0",
+    "parcel-bundler": "^1.12.5",
     "sass": "^1.69.5"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "parcel index.html",
+    "build":"parcel build index.html",
+    "compile:sass": "node-sass scss/style.scss css/style.css -w"
   },
   "author": "",
   "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/silasoyibs/ecommerce-site.git"
+  },
+  "bugs": {
+    "url": "https://github.com/silasoyibs/ecommerce-site/issues"
+  },
+  "homepage": "https://github.com/silasoyibs/ecommerce-site#readme",
   "description": ""
 }
